# xde-common

./: Makefile.am  Makefile.in  XDE.desktop.in.in  aclocal.m4  configure  configure.ac  startxde.in  xde-logout.desktop.in  xde-logout.in
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: POTFILES.in
